[gd_scene load_steps=16 format=4 uid="uid://d3o0e1hqjue38"]

[ext_resource type="Script" uid="uid://cyml0vf70ft55" path="res://scripts/stage.gd" id="1_akybh"]
[ext_resource type="Shader" uid="uid://dbkn6o43jq55t" path="res://shaders/scrollingbackground.gdshader" id="2_mmmxe"]
[ext_resource type="Texture2D" uid="uid://87gtsmkks4hp" path="res://sprites/stage_select_icons/basic-stage-thumbnail.png" id="2_wag42"]
[ext_resource type="Texture2D" uid="uid://be5wtgkkitxgh" path="res://sprites/background4.png" id="4_mmmxe"]
[ext_resource type="Shader" uid="uid://8xk0qvfh6lm7" path="res://shaders/chroma_key.gdshader" id="5_nk8o2"]
[ext_resource type="Script" uid="uid://bhswxxc0c6mo2" path="res://scripts/camera.gd" id="6_1wis1"]
[ext_resource type="Texture2D" uid="uid://dwueblka6exea" path="res://sprites/tilemap.png" id="9_5cimk"]
[ext_resource type="Shader" uid="uid://cnmmbffq7sy4t" path="res://shaders/shadow.gdshader" id="10_8u22o"]

[sub_resource type="Gradient" id="Gradient_kbcbp"]
offsets = PackedFloat32Array(0, 0.508197, 1)
colors = PackedColorArray(0.482353, 0.141176, 0.321569, 1, 0.14902, 0.490196, 0.862745, 1, 0.482353, 0.141176, 0.321569, 1)
metadata/_snap_count = 7

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fg3hj"]
gradient = SubResource("Gradient_kbcbp")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kbcbp"]
shader = ExtResource("2_mmmxe")
shader_parameter/snes_transparency = false
shader_parameter/gba_transparency = true
shader_parameter/horizontal_scan_line = false
shader_parameter/vertical_scan_line = false
shader_parameter/enable_palette_cycling = true
shader_parameter/sprite_scroll_direction = Vector2(2, 0)
shader_parameter/sprite_scroll_speed = 0.05
shader_parameter/gba_transparency_scroll_direction = Vector2(2, 0)
shader_parameter/gba_transparency_scroll_speed = 0.01
shader_parameter/gba_transparency_value = 0.26
shader_parameter/horizontal_wave_amplitude = 2.0
shader_parameter/horizontal_wave_frequency = 2.0
shader_parameter/horizontal_wave_speed = 0.2
shader_parameter/vertical_wave_amplitude = 0.0
shader_parameter/vertical_wave_frequency = 0.0
shader_parameter/vertical_wave_speed = 1.0
shader_parameter/horizontal_deform_amplitude = 0.3
shader_parameter/horizontal_deform_frequency = 0.0
shader_parameter/horizontal_deform_speed = 1.0
shader_parameter/vertical_deform_amplitude = 0.3
shader_parameter/vertical_deform_frequency = 30.0
shader_parameter/vertical_deform_speed = 1.0
shader_parameter/width = 0.0
shader_parameter/height = 0.0
shader_parameter/palette_cycling_speed = 0.1
shader_parameter/palette = SubResource("GradientTexture1D_fg3hj")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mvhnj"]
shader = ExtResource("5_nk8o2")
shader_parameter/key_color = Color(0, 1, 0, 1)
shader_parameter/similarity = 0.0
shader_parameter/smoothness = 0.0
shader_parameter/spill = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2a0qe"]
texture = ExtResource("9_5cimk")
texture_region_size = Vector2i(4, 4)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(2, -2, 2, 2, -2, 2)
0:0/0/custom_data_0 = true
0:0/0/metadata/_better_terrain = {
0: [0, 1],
4: [0, 1],
&"type": 0
}
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
1:0/0/custom_data_0 = true
1:0/0/metadata/_better_terrain = {
0: [0, 1],
4: [0, 1],
8: [0, 1],
&"type": 0
}
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(2, 2, -2, 2, -2, -2)
2:0/0/custom_data_0 = true
2:0/0/metadata/_better_terrain = {
4: [0, 1],
8: [0, 1],
&"type": 0
}
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(2, -1, 2, 2, -2, 2, -2, -1)
3:0/0/custom_data_0 = true
3:0/0/metadata/_better_terrain = {
4: [0, 1],
&"type": 0
}
4:0/0 = 0
4:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(2, 1, -1, 1, -2, -1, 2, -1)
4:0/0/physics_layer_1/polygon_0/one_way = true
4:0/0/metadata/_better_terrain = {
0: [1, 0],
4: [1, 0],
&"type": 1
}
5:0/0 = 0
5:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-2, -1, 2, -1, 2, 1, -2, 1)
5:0/0/physics_layer_1/polygon_0/one_way = true
5:0/0/metadata/_better_terrain = {
0: [1, 0],
4: [1, 0],
8: [1, 0],
&"type": 1
}
6:0/0 = 0
6:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(1, 1, -2, 1, -2, -1, 2, -1)
6:0/0/physics_layer_1/polygon_0/one_way = true
6:0/0/metadata/_better_terrain = {
4: [1, 0],
8: [1, 0],
&"type": 1
}
7:0/0 = 0
7:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-1, -2, 1, -2, 1, 2, -1, 2)
7:0/0/physics_layer_1/polygon_0/one_way = true
7:0/0/metadata/_better_terrain = {
4: [1, 0],
&"type": 1
}
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
0:1/0/custom_data_0 = true
0:1/0/metadata/_better_terrain = {
0: [0, 1],
4: [0, 1],
12: [0, 1],
&"type": 0
}
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
1:1/0/custom_data_0 = true
1:1/0/metadata/_better_terrain = {
0: [0, 1],
4: [0, 1],
8: [0, 1],
12: [0, 1],
&"type": 0
}
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
2:1/0/custom_data_0 = true
2:1/0/metadata/_better_terrain = {
4: [0, 1],
8: [0, 1],
12: [0, 1],
&"type": 0
}
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
3:1/0/custom_data_0 = true
3:1/0/metadata/_better_terrain = {
4: [0, 1],
12: [0, 1],
&"type": 0
}
4:1/0 = 0
4:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-1, -2, 1, -2, 1, 2, -1, 2)
4:1/0/physics_layer_1/polygon_0/one_way = true
4:1/0/metadata/_better_terrain = {
0: [1, 0],
3: [1],
4: [1, 0],
12: [1, 0],
&"type": 1
}
5:1/0 = 0
5:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-2, -1, -1, -2, 1, -2, 2, -1, 2, 1, 1, 2, -1, 2, -2, 1)
5:1/0/physics_layer_1/polygon_0/one_way = true
5:1/0/metadata/_better_terrain = {
0: [1, 0],
4: [1, 0],
8: [1, 0],
12: [1, 0],
&"type": 1
}
6:1/0 = 0
6:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-1, -2, 1, -2, 1, 2, -1, 2)
6:1/0/physics_layer_1/polygon_0/one_way = true
6:1/0/metadata/_better_terrain = {
4: [1, 0],
8: [1, 0],
12: [1, 0],
&"type": 1
}
7:1/0 = 0
7:1/0/physics_layer_1/polygon_0/points = PackedVector2Array(-1, -2, 1, -2, 1, 2, -1, 2)
7:1/0/physics_layer_1/polygon_0/one_way = true
7:1/0/metadata/_better_terrain = {
4: [1, 0],
12: [1, 0],
&"type": 1
}
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2)
0:2/0/custom_data_0 = true
0:2/0/metadata/_better_terrain = {
0: [0, 1],
12: [0, 1],
&"type": 0
}
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
1:2/0/custom_data_0 = true
1:2/0/metadata/_better_terrain = {
0: [0, 1],
8: [0, 1],
12: [0, 1],
&"type": 0
}
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, 2, -2, -2, 2, -2)
2:2/0/custom_data_0 = true
2:2/0/metadata/_better_terrain = {
8: [0, 1],
12: [0, 1],
&"type": 0
}
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, 1, -2, -2, 2, -2, 2, 1)
3:2/0/custom_data_0 = true
3:2/0/metadata/_better_terrain = {
12: [0, 1],
&"type": 0
}
4:2/0 = 0
4:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(2, -1, 2, 1, 0, 1, -1, -1)
4:2/0/physics_layer_1/polygon_0/one_way = true
4:2/0/metadata/_better_terrain = {
0: [1, 0],
12: [1, 0],
15: [1],
&"type": 1
}
5:2/0 = 0
5:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(2, 1, -2, 1, -2, -1, 2, -1)
5:2/0/physics_layer_1/polygon_0/one_way = true
5:2/0/metadata/_better_terrain = {
0: [1, 0],
8: [1, 0],
12: [1, 0],
&"type": 1
}
6:2/0 = 0
6:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-2, -1, 1, -1, 0, 1, -2, 1)
6:2/0/physics_layer_1/polygon_0/one_way = true
6:2/0/metadata/_better_terrain = {
8: [1, 0],
12: [1, 0],
&"type": 1
}
7:2/0 = 0
7:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-1, -2, 1, -2, 1, 2, -1, 2)
7:2/0/physics_layer_1/polygon_0/one_way = true
7:2/0/metadata/_better_terrain = {
12: [1, 0],
&"type": 1
}
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1, -2, 2, -2, 2, 2, -1, 2)
0:3/0/custom_data_0 = true
0:3/0/metadata/_better_terrain = {
0: [0, 1],
&"type": 0
}
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
1:3/0/custom_data_0 = true
1:3/0/metadata/_better_terrain = {
0: [0, 1],
8: [0, 1],
&"type": 0
}
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(1, 2, -2, 2, -2, -2, 1, -2)
2:3/0/custom_data_0 = true
2:3/0/metadata/_better_terrain = {
8: [0, 1],
&"type": 0
}
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -2, 2, -2, 2, 2, -2, 2)
3:3/0/custom_data_0 = true
3:3/0/metadata/_better_terrain = {
&"type": 0
}
4:3/0 = 0
4:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(2, 1, -1, 1, -1, -1, 2, -1)
4:3/0/physics_layer_1/polygon_0/one_way = true
4:3/0/metadata/_better_terrain = {
0: [1, 0],
&"type": 1
}
5:3/0 = 0
5:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(2, 1, -2, 1, -2, -1, 2, -1)
5:3/0/physics_layer_1/polygon_0/one_way = true
5:3/0/metadata/_better_terrain = {
0: [1, 0],
8: [1, 0],
&"type": 1
}
6:3/0 = 0
6:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(-2, -1, 1, -1, 1, 1, -2, 1)
6:3/0/physics_layer_1/polygon_0/one_way = true
6:3/0/metadata/_better_terrain = {
8: [1, 0],
&"type": 1
}
7:3/0 = 0
7:3/0/physics_layer_1/polygon_0/points = PackedVector2Array(2, 1, -2, 1, -2, -1, 2, -1)
7:3/0/physics_layer_1/polygon_0/one_way = true
7:3/0/metadata/_better_terrain = {
&"type": 1
}

[sub_resource type="TileSet" id="TileSet_wn1hm"]
tile_size = Vector2i(4, 4)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
physics_layer_1/collision_layer = 8
physics_layer_1/collision_mask = 0
custom_data_layer_0/name = "floor"
custom_data_layer_0/type = 1
sources/1 = SubResource("TileSetAtlasSource_2a0qe")
metadata/_better_terrain = {
&"decoration": ["Decoration", Color(0.411765, 0.411765, 0.411765, 1), 3, [], {
&"path": "res://addons/better-terrain/icons/Decoration.svg"
}],
&"terrains": [["walls", Color(0.198666, 0.534511, 0.683945, 1), 0, [], {
&"path": ""
}], ["platforms", Color(0.867448, 0.835529, 0.32175, 1), 0, [], {
&"path": ""
}]],
&"version": "0.2"
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wag42"]
shader = ExtResource("10_8u22o")
shader_parameter/background_color = Color(0, 1, 0, 1)
shader_parameter/shadow_color = Color(0, 0, 0, 1)
shader_parameter/offset_in_pixels = Vector2(1, 1)

[node name="stage" type="Node2D"]
script = ExtResource("1_akybh")
thumb_nail = ExtResource("2_wag42")
stage_name = "looper"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(48, 48)
limit_left = 0
limit_top = 0
limit_right = 96
limit_bottom = 96
editor_draw_limits = true
script = ExtResource("6_1wis1")

[node name="p1_spawn" type="Node2D" parent="."]
position = Vector2(12, 83)

[node name="p2_spawn" type="Node2D" parent="."]
position = Vector2(84, 83)

[node name="p3_spawn" type="Node2D" parent="."]
position = Vector2(21, 83)

[node name="p4_spawn" type="Node2D" parent="."]
position = Vector2(75, 83)

[node name="ball_spawn" type="Node2D" parent="."]
position = Vector2(49, 81)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
z_index = -1
offset_right = 96.0
offset_bottom = 96.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
z_index = -1
texture_repeat = 3
material = SubResource("ShaderMaterial_kbcbp")
offset_right = 96.0
offset_bottom = 96.0
texture = ExtResource("4_mmmxe")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.345098)
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_mvhnj")
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="game" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(96, 96)
render_target_update_mode = 4

[node name="green_screen" type="ColorRect" parent="SubViewportContainer/game"]
z_index = -5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="SubViewportContainer/game"]
tile_map_data = PackedByteArray("AAD/////AQABAAAAAAAAAP//AQABAAAAAAABAP//AQABAAAAAAACAP//AQABAAAAAAADAP//AQABAAAAAAAEAP//AQABAAAAAAAFAP//AQABAAAAAAAGAP//AQABAAAAAAAHAP//AQABAAAAAAAIAP//AQABAAAAAAAJAP//AQABAAAAAAD//wAAAQABAAIAAAAQAP//AQABAAAAAAARAP//AQABAAAAAAASAP//AQABAAAAAAATAP//AQABAAAAAAAUAP//AQABAAAAAAAVAP//AQABAAAAAAAWAP//AQABAAAAAAAXAP//AQABAAAAAAAKAP//AQABAAAAAAANAP//AQABAAAAAAAOAP//AQABAAAAAAAPAP//AQABAAAAAAAYAP//AQABAAAAAAAYAAAAAQABAAIAAAAYABgAAQABAAIAAAAYABcAAQABAAAAAAAXABgAAQABAAIAAAAWABgAAQABAAIAAAAVABgAAQABAAIAAAAUABgAAQABAAIAAAATABgAAQABAAIAAAASABgAAQABAAIAAAARABgAAQABAAIAAAAQABgAAQABAAIAAAAPABgAAQABAAIAAAAOABgAAQABAAIAAAANABgAAQABAAIAAAAMABgAAQABAAIAAAALABgAAQABAAIAAAAKABgAAQABAAIAAAAJABgAAQABAAIAAAAIABgAAQABAAIAAAAHABgAAQABAAIAAAAGABgAAQABAAIAAAAFABgAAQABAAIAAAAEABgAAQABAAIAAAADABgAAQABAAIAAAACABgAAQABAAIAAAABABgAAQABAAIAAAAAABgAAQABAAIAAAD//xgAAQABAAIAAAD//xcAAQABAAAAAAAXAAAAAQABAAIAAAAXABcAAQABAAAAAAAWABcAAQABAAAAAAAVABcAAQABAAAAAAAUABcAAQABAAAAAAATABcAAQABAAAAAAASABcAAQABAAAAAAARABcAAQABAAAAAAAQABcAAQABAAAAAAAPABcAAQABAAAAAAAOABcAAQABAAAAAAANABcAAQABAAAAAAAMABcAAQABAAAAAAALABcAAQABAAAAAAAKABcAAQABAAAAAAAJABcAAQABAAAAAAAIABcAAQABAAAAAAAHABcAAQABAAAAAAAGABcAAQABAAAAAAAFABcAAQABAAAAAAAEABcAAQABAAAAAAADABcAAQABAAAAAAACABcAAQABAAAAAAABABcAAQABAAAAAAAAABcAAQABAAAAAAAAAAAAAQABAAIAAAABAAAAAQABAAIAAAACAAAAAQABAAIAAAADAAAAAQABAAIAAAAEAAAAAQABAAIAAAAFAAAAAQABAAIAAAAGAAAAAQABAAIAAAAHAAAAAQABAAIAAAAIAAAAAQABAAIAAAAJAAAAAQABAAIAAAAKAAAAAQABAAIAAAALAAAAAQABAAIAAAAMAAAAAQABAAIAAAANAAAAAQABAAIAAAAOAAAAAQABAAIAAAAPAAAAAQABAAIAAAAQAAAAAQABAAIAAAARAAAAAQABAAIAAAASAAAAAQABAAIAAAATAAAAAQABAAIAAAAUAAAAAQABAAIAAAAVAAAAAQABAAIAAAAWAAAAAQABAAIAAAALAP//AQABAAAAAAAMAP//AQABAAAAAAD+/xcAAQABAAAAAAD+/xgAAQABAAIAAAAZABcAAQABAAAAAAAZABgAAQABAAIAAAD9/xcAAQAAAAAAAAD9/xgAAQAAAAIAAAAaABcAAQACAAAAAAAaABgAAQACAAIAAAD9////AQABAAAAAAD+////AQABAAAAAAD+/wAAAQABAAIAAAD9/wAAAQABAAIAAAAZAP//AQABAAAAAAAaAP//AQACAAAAAAAaAAAAAQACAAIAAAAZAAAAAQABAAIAAAD8/wAAAQAAAAIAAAD8////AQAAAAAAAAA=")
tile_set = SubResource("TileSet_wn1hm")
physics_quadrant_size = 1

[node name="shadow_renderer" type="ColorRect" parent="SubViewportContainer/game"]
z_index = 20
material = SubResource("ShaderMaterial_wag42")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 1)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="SubViewportContainer/game"]
_spawnable_scenes = PackedStringArray("uid://brh0j5uih2n1d", "uid://cg0f1u4swchxb")
spawn_path = NodePath("..")
